--- a/app/views/layouts/_nav_top.phtml
+++ b/app/views/layouts/_nav_top.phtml
@@ -1,6 +1,6 @@
 <div id="nav-top">
-  <div class="containter">
-  <a href="/">
+  <div class="container">
+  <a href="#none">
     <?php
       echo $this->tag->image(
         array(
@@ -12,7 +12,7 @@
     ?>
   </a>
   <input type="text" placeholder="Search command"></input>
-  <a href="/">
+  <a href="#none">
     <?php
       echo $this->tag->image(
         array(
