--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -3,8 +3,23 @@
 	<head>
 		<title>belhyun-expshell</title>
     <?php $this->assets->outputCss() ?>
+    <?php
+      echo  Phalcon\Tag::javascriptInclude("http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js", false);
+      echo  Phalcon\Tag::javascriptInclude("http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js", false);
+      echo  Phalcon\Tag::javascriptInclude("http://cdnjs.cloudflare.com/ajax/libs/underscore.string/2.3.3/underscore.string.min.js", false);
+      echo  Phalcon\Tag::javascriptInclude("http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js", false);
+    ?>
+    <?php $this->assets->outputJs() ?>
 	</head>
 	<body>
     <?php echo $this->getContent() ?>	
+    <div id="expshell">
+      <iframe class="auto-height" frameborder="0" scrolling ="yes" seamless="seamless" sandbox="allow-same-origin allow-scripts" src=""></iframe>
+    </div>
+    <div id="my-commands">
+      <h4>My Current Commands</h4>
+      <ul>
+      </ul>
+    </div>
 	</body>
 </html>
