--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,7 @@
 body{
   margin:0px;
   padding:0px;
-  background-color:rgb(238,238,238);
+  background-color:#fff;
   height: 100%;
   overflow-y: scroll;
   display:block;
@@ -13,14 +13,14 @@ body a{
 }
 
 #nav-top{
-  width:534px;
+  width:720px;
   border-bottom: 1px solid rgb(221,221,221);
   margin:16px auto;
-  padding: 0px 0px 12px 0px;
+  padding:0px;
+  background-color: rgb(221,221,221);
 }
 
 #nav-top .container{
-
 }
 
 #nav-top a img.logo{
@@ -33,11 +33,45 @@ body a{
   margin:16px 0px 0px 16px;
   border:0px none;
   height:30px;
-  width: 306px;
+  width: 492px;
   padding:0px 0px 0px 10px;
 }
 
 #nav-top a img.search{
   vertical-align:top;
   margin:16px 0px 0px 0px;
+}
+
+body #expshell{
+  float:left;
+  margin:0px;
+  padding:0px;
+  overflow:hidden;
+  width:80%;
+  height:1024px;
+  padding-top: 16px;
+}
+
+body #expshell iframe{
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+  overflow-x:hidden;
+}
+
+body #my-commands{
+  position:relative;
+  float:right;
+  margin-right:100px;
+  width:250px;
+}
+body #my-commands h4{
+  display:block;
+  padding: 15px;
+  text-align:center;
+  background-color:rgb(221,221,221);
+}
+
+body #my-commands ul li{
+  padding:5px;
 }
