--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,7 +13,7 @@ body a{
 }
 
 #nav-top{
-  width:720px;
+  width:750px;
   border-bottom: 1px solid rgb(221,221,221);
   margin:16px auto;
   padding:0px;
@@ -21,6 +21,7 @@ body a{
 }
 
 #nav-top .container{
+  padding: 5px;
 }
 
 #nav-top a img.logo{
@@ -60,9 +61,8 @@ body #expshell iframe{
 }
 
 body #my-commands{
-  position:relative;
-  float:right;
-  margin-right:100px;
+  position:fixed;
+  left:1530px;
   width:250px;
 }
 body #my-commands h4{
