--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -17,7 +17,7 @@
       <iframe class="auto-height" frameborder="0" scrolling ="yes" seamless="seamless" sandbox="allow-same-origin allow-scripts" src=""></iframe>
     </div>
     <div id="my-commands">
-      <h4>My Current Commands</h4>
+      <h4>My Recently Commands</h4>
       <ul>
       </ul>
     </div>
