--- a/public/css/application.css
+++ b/public/css/application.css
@@ -29,7 +29,7 @@ body a{
   height:60px;
 }
 
-#nav-top input{
+#nav-top input[type='text']{
   vertical-align:top;
   margin:16px 0px 0px 16px;
   border:0px none;
@@ -76,4 +76,12 @@ body #my-commands ul{
 }
 body #my-commands ul li{
   padding:8px;
+}
+
+body #save-commands{
+  display:inline-block;
+  position:absolute;
+  left:420px;
+  top:37px;
+  background-color:rgb(221,221,221);
 }
