--- a/app/views/layouts/_nav_top.phtml
+++ b/app/views/layouts/_nav_top.phtml
@@ -26,3 +26,4 @@
   </div>
 </div>
 <input id="save-commands" type="button" value="save commands"></input>
+<button value="view saved commands">view saved commands</button>
